--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "hr-han",
   "license": "ISC",
   "dependencies": {
+    "@babel/cli": "^7.8.4",
     "@babel/core": "^7.8.4",
     "@babel/node": "^7.8.4",
     "@babel/polyfill": "^7.8.7",
@@ -21,6 +22,7 @@
     "css-loader": "^3.4.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-flash": "0.0.2",
     "express-session": "^1.17.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "get-blob-duration": "^1.1.0",
@@ -53,7 +55,6 @@
     "start": "PRODUCTION=true node build/init.js"
   },
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
     "nodemon": "^2.0.2",
     "prettier": "^1.19.1"
   }
