--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "build:assets": "cd src && cross-env WEBPACK_ENV=production webpack",
     "build:server": "babel src --out-dir build --ignore 'src/assets','src/static','src/webpack.config.js'",
     "copyAll": "cp -R src/static build && cp -R src/views build",
+    "dev:copyAll": "xcopy .\\src\\static .\\build\\static /s /y && xcopy .\\src\\views .\\build\\views /s /y",
     "build": "npm run build:server && npm run build:assets && npm run copyAll",
     "prestart": "npm run build",
     "tunnel": "lt --port 4000",
